# askap-benchmarks

./: .gitignore  .gitmodules  NO_BUILD  README.md
attic/: README.md
attic/mpiperf/: doxy.conf  gatherPlot.py  writePlot.py
attic/msperf/: README  SConstruct  build.py
attic/tConvolveACC/: Makefile  Makefile.intel  run.sh  tConvolveACC.cc  tConvolveCPU.sh  tConvolveCPU1.sh  tConvolveCmplxMult.cc  tConvolveDegrid.cc
attic/tConvolveBurnIn/: Benchmark.cc  Benchmark.h
attic/tConvolveCommon/: common.cc  common.h
attic/tConvolveCuda/: CudaGridKernel.cu  CudaGridder.h  Makefile  Stopwatch.cc  common.cc  run.sbatch  slurm-2757.out  slurm-2759.out  tConvolveCuda.cc
attic/tConvolveHIP/: CudaGridder.cc  CudaGridder.cc.orig  HIPGridKernel.cu  HIPGridKernel.h  HIPGridder.cc  HIPGridder.h  Makefile  tConvolveHIP.cc  tConvolveHIP.h
attic/tConvolveHIPCPU/: CudaGridKernel.cc  CudaGridKernel.h  HIPCPUGridKernel.cu  HIPCPUGridKernel.h  HIPCPUGridder.cc  HIPCPUGridder.h  Makefile  run.sbatch  tConvolveCuda.cc  tConvolveHIPCPU.cc
attic/tConvolveMIC/: Makefile  run.sh  tConvolveMIC.cc
attic/tConvolveMPI/: Benchmark.cc  Benchmark.h  Makefile  Makefile.intel  common.h  run.sh  tConvolveMPI.cc
attic/tConvolveMT/: Benchmark.cc  run.sh
attic/tConvolveOMP/: Makefile  Makefile.intel  run.sbatch  slurm-129409.out  slurm-129411.out  tConvolveOMP  tConvolveOMP.cc
attic/tConvolveOpenCL/: Makefile  Stopwatch.h  kernel.cl  tConvolveOpenCL.cc
attic/tHogbomCleanACC/: tHogbomCleanACC.sh  tHogbomCleanCPU1.sh
attic/tHogbomCleanCuda/: HogbomCuda.cu  HogbomGolden.cc  Makefile  Stopwatch.h
attic/tHogbomCleanGo/: Hogbom.go  README.md
attic/tHogbomCleanMIC/: HogbomGolden.cc  HogbomMIC-subtractPSF-opt.cc  Parameters.h  Stopwatch.cc  img.py  tHogbomClean.cc
attic/tHogbomCleanOMP/: HogbomOMP.cc  Makefile
attic/tSimpleACC/: Makefile
current/mpiperf/: SConstruct
current/profile_util/: Makefile  README.md  build.sh  build_all.sh  build_cpu.sh  build_cuda.sh  (+1 more)
gpuPacer2022/: README.md
gpuPacer2022/codes/CUDA/clean/version1/: CMakeLists.txt  YS_CleanConfig.h.in
gpuPacer2022/codes/CUDA/clean/version1/src/: CMakeLists.txt  HogbomGolden.cpp  HogbomGolden.h
gpuPacer2022/codes/CUDA/clean/version1/utilities/: CMakeLists.txt
gpuPacer2022/codes/CUDA/degridding/version1/: CMakeLists.txt  main.cpp
gpuPacer2022/codes/CUDA/degridding/version1/src/: DegridderGPU.cu  DegridderGPU.h  degridKernelGPU.cu  degridKernelGPU.cuh
gpuPacer2022/codes/CUDA/degridding/version1/utilities/: Parameters.h
gpuPacer2022/codes/clean/GPU/: CMakeLists.txt  main.cpp
gpuPacer2022/codes/clean/GPU/src/: SolverFactory.h
gpuPacer2022/codes/clean/GPU/src/Solvers/: CMakeLists.txt  GPUOlder.cu  GPUOlder.h  GPUOlder.hip  GPUPS.cu  GPUPS.h  GPUPS.hip  GPUPSFullUnroll.cu  GPUPSFullUnroll.h  GPUPSFullUnroll.hip  GPUPSLastWUnrolled.cu  GPUPSLastWUnrolled.h  GPUPSLastWUnrolled.hip  Golden.cpp  Golden.h
gpuPacer2022/codes/clean/GPU/utilities/: CMakeLists.txt  Parameters.h  ThreadAffinityUtil.cpp  WarmupGPU.cu  WarmupGPU.h  gpuCommon.h
gpuPacer2022/codes/degridding/GPU/src/Solvers/: CMakeLists.txt  DegridderCPU.cpp  DegridderCPU.h  DegridderGPUInterleaved.cu  DegridderGPUInterleaved.h  DegridderGPUInterleaved.hip  DegridderGPULessIdle.cu  DegridderGPULessIdle.h  DegridderGPULessIdle.hip  DegridderGPUSequential.cu  DegridderGPUSequential.h  DegridderGPUSequential.hip  DegridderGPUTiled.cu  DegridderGPUTiled.h  DegridderGPUTiled.hip  DegridderGPUWarpShuffle.cu  DegridderGPUWarpShuffle.h  DegridderGPUWarpShuffle.hip
gpuPacer2022/codes/gridding/CUDA/: CMakeLists.txt  README.md
gpuPacer2022/codes/gridding/CUDA/src/: IGridder.h  SolverFactory.h
gpuPacer2022/codes/gridding/CUDA/src/Solvers/: GridderCPU.cpp  GridderCPU.h  GridderGPUAtomic.cu  GridderGPUAtomic.h  GridderGPUAtomicTiled.cu  GridderGPUAtomicTiled.h  GridderGPUOlder.cu  GridderGPUOlder.h
gpuPacer2022/codes/gridding/CUDA/utilities/: CMakeLists.txt
gpuPacer2022/codes/gridding/GPU/: CMakeLists.txt  main.cpp
gpuPacer2022/codes/gridding/GPU/src/: IGridder.h
gpuPacer2022/codes/gridding/GPU/src/Solvers/: CMakeLists.txt  GridderCPU.cpp  GridderCPU.h  GridderGPUAtomic.cu  GridderGPUAtomic.h  GridderGPUAtomic.hip  GridderGPUAtomicTiled.cu  GridderGPUAtomicTiled.h  GridderGPUAtomicTiled.hip  GridderGPUOlder.cu  GridderGPUOlder.h  GridderGPUOlder.hip
gpuPacer2022/codes/gridding/GPU/utilities/: LoggerUtil.h  MaxError.cpp  MaxError.h  MemUtil.cpp  TimeUtil.cpp  WarmupGPU.cu  gpuCommon.h
mpiperf/: README  writePlot.py
msperf/: SConstruct  dependencies.default
tConvolveACC/: Makefile  Stopwatch.h  tConvolveCmplxMult.cc
tConvolveBurnIn/: Makefile  tConvolveBurnIn.cc  tConvolveBurnIn.h
tConvolveCuda/: CudaGridKernel.cu  CudaGridKernel.h  CudaGridder.cc  CudaGridder.h  Makefile  Stopwatch.cc  Stopwatch.h  run.sbatch  tConvolveCuda  tConvolveCuda.cc  tConvolveCuda.h
tConvolveMIC/: Stopwatch.h  tConvolveMIC.cc
tConvolveMPI/: Benchmark.cc  Benchmark.h  Makefile  Makefile.intel  tConvolveMPI.cc  tConvolveMPI.h
tConvolveMT/: Benchmark.h  Makefile  Makefile.intel  tConvolveMT.cc  tConvolveMT.h
tConvolveOMP/: Makefile.intel  tConvolveOMP.cc
tConvolveOpenCL/: OpenCLGridder.cc  OpenCLGridder.h  Stopwatch.cc  Stopwatch.h  tConvolveOpenCL.cc
tHogbomCleanACC/: HogbomACC.cc  HogbomACC.h  HogbomGolden.cc  HogbomGolden.h  Makefile  Parameters.h  Stopwatch.cc  Stopwatch.h  tHogbomCleanACC.cc  tHogbomCleanACC.h  tHogbomCleanCPU.sh
tHogbomCleanCuda/: .gitignore  HogbomCuda.cu  HogbomCuda.h  HogbomGolden.cc  HogbomGolden.h  Makefile  Parameters.h  Stopwatch.cc  Stopwatch.h  dirty.img  psf.img  tHogbomCleanCuda.cc
tHogbomCleanGo/: tHogbomCleanGo.go
tHogbomCleanMIC/: HogbomGolden.cc  HogbomGolden.h  HogbomMIC-findPeak-opt1.cc  HogbomMIC-findPeak-opt2.cc  HogbomMIC.cc  HogbomMIC.h  Makefile  Parameters.h  Stopwatch.cc  Stopwatch.h  tHogbomClean.cc  tHogbomCleanMIC.cc
tHogbomCleanOMP/: HogbomGolden.cc  HogbomGolden.h  HogbomOMP.cc  HogbomOMP.h  Makefile  Parameters.h  tHogbomCleanOMP.cc
tMajorACC/: Makefile  pgi_setup.sh  tMajorACC.cc
tSimpleACC/: tSimpleACC.cc
(+292 files in other folders)
